fix(toggle): center align inner text/icon

--- a/src/Toggle/styles/index.less
+++ b/src/Toggle/styles/index.less
@@ -99,7 +99,8 @@
 
 // Label text inside the switch
 .rs-toggle-inner {
-  display: block;
+  display: flex;
+  align-items: center;
   transition: margin @toggle-transition;
 
   .high-contrast-mode({
